[gd_scene load_steps=43 format=2]

[ext_resource path="res://bunnyrunner_files/sprites/Players/hurt_definitivo.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://bunnyrunner_files/sprites/Particles/smoke.png" type="Texture" id=3]
[ext_resource path="res://bunnyrunner_files/samples/jump.wav" type="AudioStream" id=4]
[ext_resource path="res://bunnyrunner_files/samples/fly_man.wav" type="AudioStream" id=5]
[ext_resource path="res://bunnyrunner_files/sprites/Items/wing_right.png" type="Texture" id=6]
[ext_resource path="res://bunnyrunner_files/sprites/Items/wing_left.png" type="Texture" id=7]
[ext_resource path="res://bunnyrunner_files/samples/flap.wav" type="AudioStream" id=8]
[ext_resource path="res://bunnyrunner_files/sprites/Items/jetpack.png" type="Texture" id=9]
[ext_resource path="res://bunnyrunner_files/sprites/smokeWhite1.png" type="Texture" id=10]
[ext_resource path="res://bunnyrunner_files/samples/Som_jetpack.wav" type="AudioStream" id=11]
[ext_resource path="res://scenes/Bolha.tscn" type="PackedScene" id=12]
[ext_resource path="res://bunnyrunner_files/samples/power_up.wav" type="AudioStream" id=13]
[ext_resource path="res://bunnyrunner_files/sprites/Players/right_definitivo.png" type="Texture" id=14]
[ext_resource path="res://bunnyrunner_files/samples/bolha protegida.wav" type="AudioStream" id=15]
[ext_resource path="res://bunnyrunner_files/samples/bolha explodindo.wav" type="AudioStream" id=16]
[ext_resource path="res://bunnyrunner_files/sprites/Players/Stay_definitivo_ultimate.png" type="Texture" id=17]
[ext_resource path="res://bunnyrunner_files/sprites/Players/left_definitivo.png" type="Texture" id=18]
[ext_resource path="res://bunnyrunner_files/sprites/Players/Jump_definitivo.png" type="Texture" id=19]
[ext_resource path="res://bunnyrunner_files/sprites/Players/victory 04_definitivo.png" type="Texture" id=20]
[ext_resource path="res://bunnyrunner_files/sprites/Players/victory 03_definitivo.png" type="Texture" id=21]
[ext_resource path="res://bunnyrunner_files/sprites/Players/Power_UP_wing_definitivo.png" type="Texture" id=22]
[ext_resource path="res://bunnyrunner_files/sprites/Players/Power_UP_foguete_definitivo.png" type="Texture" id=23]
[ext_resource path="res://bunnyrunner_files/sprites/Players/power_UP_bubble_definitivo.png" type="Texture" id=24]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.539823, 0.955752 )
colors = PoolColorArray( 0.992676, 0.988798, 0.988798, 1, 0.998847, 0.998237, 0.998237, 0.200363, 1, 1, 1, 0.0509804 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
max_value = 100.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.955882, 100 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0.0220588, 0.445455 ), 0.0, 0.0, 0, 0, Vector2( 0.963235, 0.972727 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
spread = 15.0
flatness = 0.5
gravity = Vector3( 0, 0, 0 )
initial_velocity = 60.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping_curve = SubResource( 4 )
scale = 0.5
scale_curve = SubResource( 6 )
color_ramp = SubResource( 2 )

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0, 0.168142, 0.433628, 0.663717 )
colors = PoolColorArray( 0.976471, 0.956863, 0.956863, 0.972549, 0.298039, 0.701961, 1, 1, 1, 0.737255, 0.658824, 1, 1, 0.890196, 0, 1 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.970588, 0.0681818 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.0
scale_curve = SubResource( 11 )
color_ramp = SubResource( 9 )

[sub_resource type="Animation" id=13]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("smoke:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("smoke2:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 10 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("fire:process_material")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 12 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("fire2:process_material")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 12 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("wing_left:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -59.9999, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("wing_right:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 59.9999, 0.0 ]
}

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "victory",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 14 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "foguete",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "voa",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ) ],
"loop": true,
"name": "ball",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 29.5501, 75.8753 )

[sub_resource type="Animation" id=17]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 33.1254 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.48584, 0.670394 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=18]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 101.472 ), Vector2( 0, 101.472 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.90125, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1.7, 1.7 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_mask = 4
script = ExtResource( 2 )

[node name="Bolha" parent="." instance=ExtResource( 12 )]
visible = false

[node name="Jet_pack" type="Node2D" parent="."]
visible = false
position = Vector2( -196.773, 27.3858 )

[node name="jetpack" type="Sprite" parent="Jet_pack"]
position = Vector2( 196.428, -7.51889 )
texture = ExtResource( 9 )

[node name="smoke" type="Particles2D" parent="Jet_pack"]
position = Vector2( 156.385, 80.0924 )
rotation = 1.57079
process_material = SubResource( 7 )
texture = ExtResource( 10 )

[node name="smoke2" type="Particles2D" parent="Jet_pack"]
position = Vector2( 241.093, 81.019 )
rotation = 1.57079
process_material = SubResource( 7 )
texture = ExtResource( 10 )

[node name="fire" type="Particles2D" parent="Jet_pack"]
position = Vector2( 155.57, 75.6771 )
amount = 10
lifetime = 1.2
process_material = SubResource( 12 )

[node name="fire2" type="Particles2D" parent="Jet_pack"]
position = Vector2( 239.992, 75.6771 )
amount = 10
lifetime = 1.2
process_material = SubResource( 12 )

[node name="anim" type="AnimationPlayer" parent="Jet_pack"]
anims/mochila_jato = SubResource( 13 )

[node name="wings" type="Node2D" parent="."]
visible = false
position = Vector2( -0.949982, 0 )

[node name="wing_left" type="Sprite" parent="wings"]
position = Vector2( -21.4466, 21.9143 )
texture = ExtResource( 7 )
offset = Vector2( -37.0842, -30.9827 )

[node name="wing_right" type="Sprite" parent="wings"]
position = Vector2( 31.4248, 21.4705 )
texture = ExtResource( 6 )
offset = Vector2( 39.059, -31.8499 )

[node name="anim" type="AnimationPlayer" parent="wings"]
anims/flap = SubResource( 14 )

[node name="sprite" type="AnimatedSprite" parent="." groups=[
"player",
]]
position = Vector2( 0.041461, 2.20243 )
scale = Vector2( 0.878663, 0.84344 )
frames = SubResource( 15 )
animation = "idle"
speed_scale = 0.5

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( 2.69557, 14.3239 )
shape = SubResource( 16 )

[node name="camera" type="Camera2D" parent="."]
position = Vector2( 649.258, 0 )
current = true
limit_left = 0
limit_top = 0
limit_bottom = 0

[node name="anim" type="AnimationPlayer" parent="."]
anims/boing = SubResource( 17 )

[node name="dust" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, 101.472 )
scale = Vector2( 1.7, 1.7 )

[node name="smoke" type="Sprite" parent="dust"]
position = Vector2( 76.3478, -4.66832 )
texture = ExtResource( 3 )

[node name="smoke2" type="Sprite" parent="dust"]
position = Vector2( -81.5885, -3.02286 )
texture = ExtResource( 3 )

[node name="anim" type="AnimationPlayer" parent="dust"]
anims/dust = SubResource( 18 )

[node name="jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Fx"

[node name="dead" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Fx"

[node name="flap" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "Fx"

[node name="foguete" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "Fx"

[node name="bolha_em_acao" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
bus = "Fx"

[node name="bolha_encerrada" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
bus = "Fx"

[node name="power_up" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
bus = "Fx"
